[gd_scene load_steps=13 format=2]

[ext_resource path="res://surface_tool/TerrainSurfaceTool.gd" type="Script" id=1]
[ext_resource path="res://sample.png" type="Texture" id=2]
[ext_resource path="res://surface_tool/surfacing_tool.gdshader" type="Shader" id=3]
[ext_resource path="res://surface_tool/water_level.gdshader" type="Shader" id=4]
[ext_resource path="res://surface_tool/terrain.gdshader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/layer_count = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/height_scale = 1.0
shader_param/min_water_level = 0.0

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 1, 1 )
subdivide_width = 1022
subdivide_depth = 1022
center_offset = Vector3( 0.5, 0, 0.5 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/height_scale = 1.0

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 1, 1 )
subdivide_width = 1022
subdivide_depth = 1022
center_offset = Vector3( 0.5, 0, 0.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Spatial:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotate"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Spatial:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="TerrainSurfaceTool" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WaterSurfaceViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="WaterSurfaceViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="TextureRect" type="TextureRect" parent="WaterSurfaceViewportContainer/Viewport"]
material = SubResource( 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TerrainViewportContainer" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="TerrainViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="TerrainViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="TerrainViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 1.1, 2 )

[node name="WaterLevelMesh" type="MeshInstance" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, -2, 0, -2 )
material_override = SubResource( 3 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="TerrainMesh" type="MeshInstance" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, -2, 0, -2 )
material_override = SubResource( 6 )
mesh = SubResource( 7 )
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TerrainViewportContainer/Viewport"]
root_node = NodePath("../..")
autoplay = "rotate"
anims/RESET = SubResource( 4 )
anims/rotate = SubResource( 5 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 0.2
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
columns = 3

[node name="Label_TerrainScale" type="Label" parent="GridContainer"]
margin_top = 1.0
margin_right = 81.0
margin_bottom = 15.0
text = "Terrain Scale"

[node name="Label_TerrainScale_Value" type="Label" parent="GridContainer"]
margin_left = 85.0
margin_top = 1.0
margin_right = 113.0
margin_bottom = 15.0
text = "0.00"

[node name="HSlider_TerrainScale" type="HSlider" parent="GridContainer"]
margin_left = 117.0
margin_right = 329.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.24
tick_count = 11
ticks_on_borders = true

[node name="Label_Sealevel" type="Label" parent="GridContainer"]
margin_top = 21.0
margin_right = 81.0
margin_bottom = 35.0
text = "Sealevel"

[node name="Label_Sealevel_Value" type="Label" parent="GridContainer"]
margin_left = 85.0
margin_top = 21.0
margin_right = 113.0
margin_bottom = 35.0
text = "0.00"

[node name="HSlider_Sealevel" type="HSlider" parent="GridContainer"]
margin_left = 117.0
margin_top = 20.0
margin_right = 329.0
margin_bottom = 36.0
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.01
tick_count = 11
ticks_on_borders = true

[node name="TerrainFilesDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
resizable = true
dialog_text = "Select a heightmap that has been sliced"
mode = 0
access = 1

[connection signal="value_changed" from="GridContainer/HSlider_TerrainScale" to="." method="_on_HSlider_TerrainScale_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_Sealevel" to="." method="_on_HSlider_Sealevel_value_changed"]
[connection signal="file_selected" from="TerrainFilesDialog" to="." method="_on_TerrainFilesDialog_file_selected"]
